# O.L.I.V.I.A.

./: .env.example  .gitattributes  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_console.py  run_olivia.py
.github/workflows/: ci.yml  test.yml
benchmarks/results/: 2026-07-03_37db37c_harness-validation-tinyllama.json
config/: Modelfile.template  character.template.yaml
docs/: ARCHITECTURE.md  MASTER_PLAN.md  OPTIMIZATION_FINDINGS.md  OPTIMIZATION_ROADMAP.md  PRIVATE_ASSETS.md  TECHNICAL_DOCUMENTATION.md
docs/technical/: TTS_OPTIMIZATION.md
src/: ci_check_violation.py
src/api/: config.py  constants.py  container.py  dependencies.py  main.py  middleware.py  protocols.py
src/api/models/: __init__.py  chat.py  common.py
src/api/routes/: chat.py  health.py  memory.py  settings.py  voice.py
src/api/services/: audio_output.py  chat_service.py  llm_service.py  memory_service.py  metrics.py  settings_service.py  state_manager.py  stt_service.py  tts_queue.py  tts_service.py
src/api/utils/: audio_utils.py  exceptions.py  sentence_buffer.py  tts_sanitizer.py
src/config/: __init__.py  config_loader.py
src/core/: __init__.py
src/core/llm/: __init__.py  ollama_client.py
src/core/memory/: __init__.py  dreaming.py  fact_extractor.py  smart_memory.py
src/core/speech/: __init__.py  audio_processing.py  chatterbox_tts.py  stt.py
src/core/tools/: __init__.py  web_search.py
src/experimental/: __init__.py
src/experimental/memory/: __init__.py  fact_extractor.py
src/experimental/speech/: wake_word_enhanced.py
src/flet_app/: app.py  main.py  theme.py
src/flet_app/components/: animated_button.py  chat_display.py  settings_dialog.py  status_indicator.py
src/flet_app/services/: api_client.py  state_manager.py  voice_client.py
src/flet_app/utils/: animations.py
src/legacy/: README.md
src/utils/: __init__.py  logger.py
tests/: QA_REPORT.md  __init__.py  conftest.py
tests/api/: test_api_endpoints.py  test_memory_settings_routes.py
tests/benchmarks/: __init__.py  ab_test_runner.py  baseline_comparison.py  baseline_metrics.py  run_baseline.py  test_e2e_pipeline.py  test_latency.py  test_memory_leaks.py  test_micro.py  test_performance.py  vram_tracker.py
tests/integration/: __init__.py  test_api_endpoints.py  test_chat_flow.py  test_memory_correctness.py  test_service_lifecycle.py  test_tts_pipeline.py
tests/personality/: test_character.py
tests/quality/: __init__.py  quality_tests.py
tests/smoke/: test_smoke.py
tests/ui/: test_flet_components.py
tests/unit/: __init__.py  test_api_config.py  test_audio_utils.py  test_background_tasks.py  test_chatterbox_tts.py  test_config_loader.py  test_error_handling.py  test_llm_streaming.py  test_memory.py  test_models.py  test_ollama_client.py  test_sentence_buffer.py  test_services.py  test_smart_memory.py  test_state_manager.py  test_tts_optimization.py  test_voice_pipeline.py
tools/: bench.py  bench_compare.py  combine_training_data.py  create_dpo_pairs.py  evaluate_personality.py  generate_companion_data.py  generate_training_data.py  validate_training_data.py
tools/model_engineering/: README.md  __init__.py  convert_hf_to_gguf.py  convert_to_gguf.py  finetune_olivia.py  merge_lora.py  train_dpo.py  verify_merge.py
tools/model_engineering/configs/: olivia_della_merge.yaml  olivia_della_merge_v2.yaml
tools/model_engineering/merge/: README.md  olivia_dare_ties.yaml  olivia_slerp_control.yaml  run_merge.sh  verify_merge.py
