[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olivia"
version = "1.0.0"
description = "Offline Local Intelligent Voice Interactive Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zyriel"}
]
keywords = ["ai", "voice-assistant", "llm", "local", "privacy", "offline"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/ZyrielZero/project-olivia"
Documentation = "https://github.com/ZyrielZero/project-olivia/tree/main/docs"
Repository = "https://github.com/ZyrielZero/project-olivia"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "pytest-benchmark>=5.0",
    "ruff>=0.14",
    "psutil>=7.0",
]
model-engineering = [
    "unsloth>=0.4.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "trl>=0.8.0",
    "gguf>=0.6.0",
    "sentencepiece>=0.2.0",
    "peft>=0.8.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=0.26.0",
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored from llama.cpp — not our code to lint
exclude = ["tools/model_engineering/convert_hf_to_gguf.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"]
ignore = [
    "E501",   # line length is advisory; formatter handles it
    "D105",   # missing docstring in magic method — low value
    "D107",   # missing docstring in __init__ — class docstring covers it
    "D102",   # TODO(phase-0): backfill method docstrings as files are touched, then re-enable
    "D205",   # TODO(phase-0): reflow summary lines as files are touched, then re-enable
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/**" = ["D"]
"tools/**" = ["D"]
"run_*.py" = ["D"]
