[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olivia"
version = "1.0.0"
description = "Offline Local Intelligent Voice Interactive Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zyriel"}
]
keywords = ["ai", "voice-assistant", "llm", "local", "privacy", "offline"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Portable dependency floors (what the package needs anywhere).
# Windows/CUDA deployment uses the exact pins in requirements.txt instead.
# chatterbox-tts is deliberately absent: it hard-pins torch==2.6.0 and must be
# installed with --no-deps (see requirements.txt header).
dependencies = [
    "torch>=2.6",
    "torchaudio>=2.6",
    "ollama>=0.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "chromadb>=1.4,<2",
    "sentence-transformers>=5.0",
    "librosa>=0.11",
    "s3tokenizer>=0.3",
    "transformers>=4.57,<5",
    "diffusers>=0.29",
    "resemble-perth>=1.0",
    "conformer>=0.3",
    "safetensors>=0.5",
    "omegaconf>=2.3",
    "sounddevice>=0.5",
    "soundfile>=0.13",
    "faster-whisper>=1.2",
    "silero-vad>=5.1",
    "numpy>=1.24,<2",
    "scipy>=1.14",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "trafilatura>=2.0",
    "fastapi>=0.139",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.40",
    "pydantic>=2.11",
    "pydantic-settings>=2.12",
    "websockets>=15.0",
    "python-multipart>=0.0.21",
    "flet>=0.80",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/ZyrielZero/O.L.I.V.I.A."
Documentation = "https://github.com/ZyrielZero/O.L.I.V.I.A./tree/main/docs"
Repository = "https://github.com/ZyrielZero/O.L.I.V.I.A."

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "pytest-benchmark>=5.0",
    "ruff>=0.14",
    "psutil>=7.0",
]
model-engineering = [
    "unsloth>=0.4.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "trl>=0.8.0",
    "gguf>=0.6.0",
    "sentencepiece>=0.2.0",
    "peft>=0.8.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=0.26.0",
]

[tool.setuptools]
packages = ["src"]

[tool.coverage.report]
# Ratchet: raise as coverage grows; never lower. Applies whenever --cov runs (CI).
fail_under = 40

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored from llama.cpp — not our code to lint
exclude = ["tools/model_engineering/convert_hf_to_gguf.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"]
ignore = [
    "E501",   # line length is advisory; formatter handles it
    "D105",   # missing docstring in magic method — low value
    "D107",   # missing docstring in __init__ — class docstring covers it
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/**" = ["D"]
"tools/**" = ["D"]
"run_*.py" = ["D"]
